--- a/start.html
+++ b/start.html
@@ -40,6 +40,41 @@
 		li {
 			margin: 10px 15px;
 		}
+		#loader {
+		  position: absolute;
+		  left: 50%;
+		  top: 50%;
+		  z-index: 1;
+		  width: 150px;
+		  height: 150px;
+		  margin: -75px 0 0 -75px;
+		  border: 16px solid #f3f3f3;
+		  border-radius: 50%;
+		  border-top: 16px solid #0a6600;
+		  width: 120px;
+		  height: 120px;
+		  -webkit-animation: spin 2s linear infinite;
+		  animation: spin 2s linear infinite;
+		  display: none;
+		}
+		#loaderText {
+			display: none;
+			justify-content: center;
+			position: absolute;
+			left: 50%;
+			top: 20%;
+			right: 50%;
+			margin-left: -110px;
+			margin-top: 80px;
+		}
+		@-webkit-keyframes spin {
+		  0% { -webkit-transform: rotate(0deg); }
+		  100% { -webkit-transform: rotate(360deg); }
+		}
+		@keyframes spin {
+		  0% { transform: rotate(0deg); }
+		  100% { transform: rotate(360deg); }
+		}
 	</style>
 </head>
 <body>
@@ -49,20 +84,31 @@
 		<ul>
 			<li>
 				<a href="/easy">
-					<button>Easy</button>
+					<button onclick="loading()">Easy</button>
 				</a>
 			</li>
 			<li>
 				<a href="/medium">
-					<button>Medium</button>
+					<button onclick="loading()">Medium</button>
 				</a>
 			</li>
 			<li>
 				<a href="/hard">
-					<button>Hard</button>
+					<button onclick="loading()">Hard</button>
 				</a>
 			</li>
 		</ul>
 	</div>
+	<div id="loaderText">
+		<h2>Preparing the game . . .</h2>
+	</div>
+	<div id="loader"></div>
+	<script>
+		function loading() {
+			document.getElementsByClassName("container")[0].style.display = "none";
+			document.getElementById("loader").style.display = "flex";
+			document.getElementById("loaderText").style.display = "table";
+		}
+	</script>
 </body>
 </html>
