fix: add loading page on undo

--- a/game.html
+++ b/game.html
@@ -125,7 +125,7 @@
 		<ul>
 			<li>
 				<a href="/undo">
-					<button>Undo</button>
+					<button onclick="loading()">Undo</button>
 				</a>
 			</li>
 			<li>
